# lnrpc/routerrpc/router.swagger.json
@@ -491,6 +491,21 @@
         }
       }
     },
+    "routerrpcCircuitKey": {
+      "type": "object",
+      "properties": {
+        "incoming_chan_id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "/ The id of the channel that the htlc arrived at our node on."
+        },
+        "htlc_id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "/ The index of the incoming htlc in the incoming channel."
+        }
+      }
+    },
     "routerrpcFailureDetail": {
       "type": "string",
       "enum": [
@@ -531,6 +546,30 @@
     },
     "routerrpcForwardFailEvent": {
       "type": "object"
+    },
+    "routerrpcForwardHtlcInterceptRequest": {
+      "type": "object",
+      "properties": {
+        "circuit_key": {
+          "$ref": "#/definitions/routerrpcCircuitKey",
+          "description": "* \nThe key of this forwarded htlc. It defines the incoming channel id and\nthe index in this channel."
+        },
+        "htlc_payment_hash": {
+          "type": "string",
+          "format": "byte",
+          "description": "/ The htlc payment hash."
+        },
+        "amount_sat": {
+          "type": "string",
+          "format": "uint64",
+          "description": "/ The htlc amount."
+        },
+        "expiry": {
+          "type": "integer",
+          "format": "int64",
+          "description": "/ The htlc expiry."
+        }
+      }
     },
     "routerrpcHtlcEvent": {
       "type": "object",
@@ -754,6 +793,15 @@
     "routerrpcResetMissionControlResponse": {
       "type": "object"
     },
+    "routerrpcResolveHoldForwardAction": {
+      "type": "string",
+      "enum": [
+        "SETTLE",
+        "FAIL",
+        "RESUME"
+      ],
+      "default": "SETTLE"
+    },
     "routerrpcRouteFeeResponse": {
       "type": "object",
       "properties": {
@@ -824,6 +872,18 @@
         }
       },
       "title": "Stream result of lnrpcPayment"
+    },
+    "routerrpcForwardHtlcInterceptRequest": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "$ref": "#/definitions/routerrpcForwardHtlcInterceptRequest"
+        },
+        "error": {
+          "$ref": "#/definitions/runtimeStreamError"
+        }
+      },
+      "title": "Stream result of routerrpcForwardHtlcInterceptRequest"
     },
     "routerrpcHtlcEvent": {
       "type": "object",
